feat(news): TR-EN translation via self-hosted LibreTranslate